--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ p { font-size: 4vw;
   }
   .column.full { 
   text-align: center ;
-  background-color: lightslategrey;
+  background-color: midnightblue;
       border-style: solid;
     border-color: white;
   border-width: 15px;
@@ -69,7 +69,7 @@ p { font-size: 4vw;
 
 .column.third { 
   text-align: center ;
-  background-color: LightSteelBlue;
+  background-color: royalblue;
   border-style: solid;
     border-color: white;
   border-width: 15px;
