--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ p { font-size: 4vw;
   }
   .column.full { 
   text-align: center ;
-  background-color: #254061;
+  background-color: #005EA5;
       border-style: solid;
     border-color: white;
   border-width: 15px;
@@ -69,7 +69,7 @@ p { font-size: 4vw;
 
 .column.third { 
   text-align: center ;
-  background-color: #558ED5;
+  background-color: #2B8CC4;
   border-style: solid;
     border-color: white;
   border-width: 15px;
