--- a/main.css
+++ b/main.css
@@ -59,7 +59,7 @@ p { font-size: 4vw;
   }
   .column.full { 
   text-align: center ;
-  background-color: #005EA5;
+  background-color: #28A197;
       border-style: solid;
     border-color: white;
   border-width: 15px;
