--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ p { font-size: 4vw;
 
 .column.third { 
   text-align: center ;
-  background-color: #558EDS;
+  background-color: #558ED5;
   border-style: solid;
     border-color: white;
   border-width: 15px;
