--- a/main.css
+++ b/main.css
@@ -30,6 +30,19 @@ h2 { font-size: 5vw;
   color: white;
 }
 
+
+h3 { font-size: 2vw;
+  font-family: arial;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1;
+  padding-bottom: 1rem;
+  margin: 0;
+  color: black;
+}
+
 p { font-size: 4vw;
   font-family: arial;
   display: flex;
