--- a/main.css
+++ b/main.css
@@ -35,8 +35,8 @@ h3 { font-size: 1vw;
   font-family: arial;
   display: flex;
   align-items: left;
-  justify-content: center;
-  text-align: center;
+  justify-content: left;
+  text-align: left;
   line-height: 1;
   padding-bottom: 1rem;
   margin: 0;
